# pybootstrap

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/pybootstrap/: __init__.py  cli.py  config.py  custom.py  display.py  models.py  registry.py  scaffolder.py
src/pybootstrap/templates/base/: Dockerfile.j2  README.md.j2  gitignore.j2  pyproject.toml.j2  requirements.txt.j2
src/pybootstrap/templates/cli/: __init__.py.j2  cli.py.j2  core.py.j2
src/pybootstrap/templates/fastapi/: config.py.j2  main.py.j2  schemas.py.j2
src/pybootstrap/templates/fastapi/routers/: __init__.py.j2  health.py.j2
src/pybootstrap/templates/fullstack/: README.md.j2  docker-compose.yml.j2  gitignore.j2
src/pybootstrap/templates/fullstack/backend/: Dockerfile.j2  main.py.j2
src/pybootstrap/templates/fullstack/frontend/: Dockerfile.j2  index.html.j2  package.json.j2
src/pybootstrap/templates/fullstack/frontend/src/: App.jsx.j2
tests/: teset_config.py  test_models.py  test_registry.py  test_scaffolder.py
